# ml_trading_model

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
models/^GSPC_model/: keras_metadata.pb  saved_model.pb
models/^GSPC_model/variables/: variables.data-00000-of-00001  variables.index
models/lstm_model/: keras_metadata.pb  saved_model.pb
models/lstm_model/variables/: variables.data-00000-of-00001  variables.index
models/transformer_model/: keras_metadata.pb  saved_model.pb
models/transformer_model/variables/: variables.data-00000-of-00001  variables.index
src/cpp/: CMakeLists.txt
src/cpp/include/: market_data.hpp  trading_engine.hpp
src/cpp/src/: bindings.cpp  market_data.cpp  trading_engine.cpp
src/cpp/test/: CMakeLists.txt  test_market_data.cpp  test_trading_engine.cpp
src/python/: data_collection.py  data_processor.py  evaluate.py  main.py  model.py  test_trading_cpp.py  test_transformer.py  transformer_model.py
